# yolo-grasp

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  graspnet.example.yaml  graspnet.mock.yaml  hardware.example.yaml  local_webcam.yaml
docs/: CONFIGURATION.md  GRASPNET.md  RUNBOOK.md  WEB_DEPLOYMENT_STEPS.md  WEB_UI.md
scripts/: capture_realsense_sample.py  deproject_pixel.py  parse_command.py  run_grasp.py  run_web.py  solve_camera_to_base.py  test_dexh13_hand.py  test_ur5e_connection.py  validate_graspnet_adapter.py  validate_step01_yolo_weights.py  validate_step02_hardware_config.py  validate_step03_hardware_interfaces.py  validate_step04_camera_to_base.py  validate_step05_plan_only.py  validate_step06_ur5e_connection.py  validate_step07_dexh13_open_close.py  validate_step08_ur5e_low_speed_motion.py  validate_step09_full_grasp.py
yolo_grasp/: __init__.py  calibration.py  cli.py  config.py  logging_utils.py  pipeline.py  safety.py  types.py  validation.py  visualization.py
yolo_grasp/camera/: __init__.py  base.py  factory.py  image_folder_camera.py  mock_camera.py  opencv_camera.py  realsense_camera.py
yolo_grasp/detection/: __init__.py  base.py  factory.py  mock_detector.py  yolo_detector.py
yolo_grasp/hand/: __init__.py  base.py  dexh13.py  factory.py  mock_hand.py
yolo_grasp/language/: __init__.py  command_parser.py  speech.py
yolo_grasp/perception/: __init__.py  depth_utils.py  object_localizer.py
yolo_grasp/planning/: __init__.py  grasp_planner.py  graspnet_adapter.py  transforms.py
yolo_grasp/robot/: base.py  (+4 more)
(+8 files in other folders)
